--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -53,15 +53,20 @@
             </ul>
         </div>
     </nav>
+    <h1>Nos conocemos</h1>    
+    <section class="containerEach">
+        <article class="tienda-icon"></article>
+        <article class="equipo-icon"></article>
+        <article class="deco-icon"></article>
+    </section>
     <div class="contenedorNosotros">
-    <h1>Nos conocemos</h1>
-    <section class="container">
+    <section class="container p-3">
         <div class="row">
-            <div class="col-6">
-                <h2>Nuestra Historia</h2>
+            <div class="col-12">
+                <h2 class="subtitulosNos">Nuestra Historia</h2>
             </div>
-            <div class="col-6">
-                <p>
+            <div class="col-12">
+                <p class="shadow-sm p-3 mb-5 bg-white rounded text-center">
                     Hola a todos, somos Damián y Carolina y estamos orgullosos de presentar nuestro proyecto
                     "Cocorita
                     Deco-Hogar". Comenzamos en el años 2019 realizando compras por pedido y luego comenzamos a
@@ -77,11 +82,11 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-6">
-                <h2>Nuestro Objetivo</h2>
+            <div class="col-12">
+                <h2 class="subtitulosNos">Nuestro Objetivo</h2>
             </div>
-            <div class="col-6">
-                <p>
+            <div class="col-12">
+                <p class="shadow-sm p-3 mb-5 bg-white rounded text-center">
                     Nuestro objetivo es desarrollar un estilo de venta en el cuales los beneficiados siempre sean
                     nuestros clientes, diferenciándonos, no sólo por la calidad de nuestros productos, sino también por
                     la velocidad en la entrega.
@@ -94,47 +99,47 @@
     <!-- FOOTER-------------------------------------------------------------------------------- -->
     <footer>
         <div>
-            <h2 class="tituloFooter">Cocorita Deco-Hogar</h2>
+            <h4 class="tituloFooter">Cocorita Deco-Hogar</h4>
         </div>
         <section class="container-fluid">
             <div class="row">
-                <article class="redesSociales col-12 text-center h4">
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-whatsapp"></i>
+                <article class="redesSociales col-lg-12 col-md-12 col-sm-12 text-center h4">
+                    <a href="https://www.facebook.com/" target="_blank" class="fa-brands fa-facebook"></a>
+                    <a href="https://www.instagram.com/" target="_blank" class="fa-brands fa-instagram"></a>
+                    <a href="https://twitter.com/home?lang=es" target="_blank" class="fa-brands fa-twitter"></a>
+                    <a href="https://wa.link/znzpnb" target="_blank" class="fa-brands fa-whatsapp"></a>
                 </article>
             </div>
             <div class="row">
-                <section class="col-3">
+                
+                <article class="col-lg-12 col-md-12 col-sm-12 align-self-stretch bd-highlight">
+                    <h6 class="font-weight-lighter">Suscríbete para recibir todas las novedades</h6>
+                </article>
+                <div class="col-lg-9 col-md-9 col-sm-9 mb-3  align-self-stretch bd-highlight">
+                    <input type="email" class="form-control" id="mailUsuario" placeholder="nombre@ejemplo.com">
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-9 mb-3 align-self-stretch bd-highlight">
+                    <input type="submit" name="" id="nameUsuario" value="Enviar" class="btn btn-secondary">
+                </div>
+                <section class="col-lg-12 col-md-12 col-sm-12">
                     <ul class="listaFooter">
                         <li>
-                            <a class="nav-link" href="./index.html">Inicio</a>
+                            <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
                         <li>
                             <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
                         </li>
                         <li>
                             <a class="nav-link" href="../pages/productos.html">Productos</a>
-                            </liclass=>
+                        </li>
                         <li>
                             <a class="nav-link" href="../pages/contacto.html">Contacto</a>
-                            </liclass=>
+                        </li>
                         <li>
                             <a class="nav-link" href="../pages/ingresar.html">Ingresar</a>
                         </li>
                     </ul>
                 </section>
-                <article class="col-3 align-self-stretch bd-highlight">
-                    <h4 class=" font-weight-lighter">Suscríbete para recibir todas las novedades</h4>
-                </article>
-                <div class="mb-3 col-3 align-self-stretch bd-highlight">
-
-                    <input type="email" class="form-control" id="mailUsuario" placeholder="nombre@ejemplo.com">
-                </div>
-                <div class="mb-3 col-1 align-self-stretch bd-highlight">
-                    <input type="submit" name="" id="" value="Enviar" class="btn btn-secondary">
-                </div>
         </section>
     </footer>
 
