--- a/pages/productos.html
+++ b/pages/productos.html
@@ -54,9 +54,9 @@
         </div>
     </nav>
     <!-- titulo---------------------------------------------------------------------------------- -->
-    <h1 class="text-center">Bienvenidos a Nuestra Tienda Online</h1>
+    <h1 class="text-center p-3">Bienvenidos a Nuestra Tienda Online</h1>
     <!-- CAROUSEL------------------------------------------------------------------------------- -->
-    <div class="container-fluid">
+    <div class="container-fluid p-4">
         <div class="carouselProducto">
             <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
@@ -106,109 +106,97 @@
             <div class="card  col-lg-3 col-md-4 col-sm-6  " style="width: 18rem;">
                 <img src="../img/productos/producto1.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-secondary w-100">Comprar</a>
+                    <h5 class="card-title text-center">Frascos de Vidrio</h5>
+                    <p class="card-text text-center">$1.000</p>
+                    <a href="../pages/ingresar.html" class="btn btn-secondary w-100">Comprar</a>
                 </div>
             </div>
             <div class="card  col-lg-3 col-md-4 col-sm-6 " style="width: 18rem;">
                 <img src="../img/productos/producto2.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-secondary w-100 ">Comprar</a>
+                    <h5 class="card-title text-center">Contenedores de Vidrio</h5>
+                    <p class="card-text text-center">$1.500</p>
+                    <a href="../pages/ingresar.html" class="btn btn-secondary w-100 ">Comprar</a>
                 </div>
             </div>
             <div class="card  col-lg-3 col-md-4 col-sm-6 " style="width: 18rem;">
                 <img src="../img/productos/producto3.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-secondary w-100">Comprar</a>
+                    <h5 class="card-title text-center">Velas de Soja</h5>
+                    <p class="card-text text-center">$800</p>
+                    <a href="../pages/ingresar.html" class="btn btn-secondary w-100">Comprar</a>
                 </div>
             </div>
             <div class="card  col-lg-3 col-md-4 col-sm-6 " style="width: 18rem;">
                 <img src="../img/productos/producto4.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-secondary w-100">Comprar</a>
+                    <h5 class="card-title text-center">Repisa de Madera</h5>
+                    <p class="card-text text-center">$3500</p>
+                    <a href="../pages/ingresar.html" class="btn btn-secondary w-100">Comprar</a>
                 </div>
             </div>
             <div class="card  col-lg-3 col-md-4 col-sm-6 " style="width: 18rem;">
                 <img src="../img/productos/producto5.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-secondary w-100">Comprar</a>
+                    <h5 class="card-title text-center">Contenedores Plasticos</h5>
+                    <p class="card-text text-center">$2.000</p>
+                    <a href="../pages/ingresar.html" class="btn btn-secondary w-100">Comprar</a>
                 </div>
             </div>
             <div class="card  col-lg-3 col-md-4 col-sm-6 " style="width: 18rem;">
                 <img src="../img/productos/producto6.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-secondary w-100">Comprar</a>
+                    <h5 class="card-title text-center">Portamaceta Macrame</h5>
+                    <p class="card-text text-center">$1.500</p>
+                    <a href="../pages/ingresar.html" class="btn btn-secondary w-100">Comprar</a>
                 </div>
             </div>
             <div class="card  col-lg-3 col-md-4 col-sm-6 " style="width: 18rem;">
                 <img src="../img/productos/producto7.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-secondary w-100">Comprar</a>
+                    <h5 class="card-title text-center">Contenedor Madera</h5>
+                    <p class="card-text text-center">$5.000</p>
+                    <a href="../pages/ingresar.html" class="btn btn-secondary w-100">Comprar</a>
                 </div>
             </div>
             <div class="card  col-lg-3 col-md-4 col-sm-6 " style="width: 18rem;">
                 <img src="../img/productos/producto8.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-secondary w-100">Comprar</a>
+                    <h5 class="card-title text-center">Difusores Vidrio</h5>
+                    <p class="card-text text-center">$1.000</p>
+                    <a href="../pages/ingresar.html" class="btn btn-secondary w-100">Comprar</a>
                 </div>
             </div>
             <div class="card  col-lg-3 col-md-4 col-sm-6 " style="width: 18rem;">
                 <img src="../img/productos/producto9.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title ">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-secondary w-100">Comprar</a>
+                    <h5 class="card-title text-center">Recibidor Hierro</h5>
+                    <p class="card-text text-center">$9.500</p>
+                    <a href="../pages/ingresar.html" class="btn btn-secondary w-100">Comprar</a>
                 </div>
             </div>
             <div class="card  col-lg-3 col-md-4 col-sm-6 " style="width: 18rem;">
                 <img src="../img/productos/producto10.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-secondary w-100">Comprar</a>
+                    <h5 class="card-title text-center">Espejo Abstracto</h5>
+                    <p class="card-text text-center">$5.500</p>
+                    <a href="../pages/ingresar.html" class="btn btn-secondary w-100">Comprar</a>
                 </div>
             </div>
             <div class="card col-md-3 col-sm-6" style="width: 18rem;">
                 <img src="../img/productos/producto11.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-secondary w-100">Comprar</a>
+                    <h5 class="card-title text-center">Cajones Mimbre</h5>
+                    <p class="card-text text-center">$3.500</p>
+                    <a href="../pages/ingresar.html" class="btn btn-secondary w-100">Comprar</a>
                 </div>
             </div>
             <div class="card col-md-3 col-sm-6" style="width: 18rem;">
                 <img src="../img/productos/producto12.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-secondary w-100">Comprar</a>
+                    <h5 class="card-title text-center">Setx3 Cuadros</h5>
+                    <p class="card-text text-center">$2.000</p>
+                    <a href="../pages/ingresar.html" class="btn btn-secondary w-100">Comprar</a>
                 </div>
             </div>
         </div>
@@ -216,7 +204,7 @@
     <!-- Como hacer un pedido-------------------------------------------------------------------------------->
     <article>
         <div>
-            <h2>¿Cómo realizar un pedido?</h2>
+            <h2 class="p-5">¿Cómo realizar un pedido?</h2>
             <ol>
                 <li class="listaRealizarPedido">Registra tu cuenta o si ya sos miembro inicia sesión</li>
                 <li class="listaRealizarPedido">Ingresa a la sección de productos</li>
@@ -232,50 +220,50 @@
 
     </article>
 
-    <!-- FOOTER-------------------------------------------------------------------------------- -->
-    <footer>
+     <!-- FOOTER-------------------------------------------------------------------------------- -->
+     <footer>
         <div>
-            <h2 class="tituloFooter">Cocorita Deco-Hogar</h2>
+            <h4 class="tituloFooter">Cocorita Deco-Hogar</h4>
         </div>
         <section class="container-fluid">
             <div class="row">
-                <article class="redesSociales col-12 text-center h4">
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-whatsapp"></i>
+                <article class="redesSociales col-lg-12 col-md-12 col-sm-12 text-center h4">
+                    <a href="https://www.facebook.com/" target="_blank" class="fa-brands fa-facebook"></a>
+                    <a href="https://www.instagram.com/" target="_blank" class="fa-brands fa-instagram"></a>
+                    <a href="https://twitter.com/home?lang=es" target="_blank" class="fa-brands fa-twitter"></a>
+                    <a href="https://wa.link/znzpnb" target="_blank" class="fa-brands fa-whatsapp"></a>
                 </article>
             </div>
             <div class="row">
-                <section class="col-3">
+                
+                <article class="col-lg-12 col-md-12 col-sm-12 align-self-stretch bd-highlight">
+                    <h6 class="font-weight-lighter">Suscríbete para recibir todas las novedades</h6>
+                </article>
+                <div class="col-lg-9 col-md-9 col-sm-9 mb-3  align-self-stretch bd-highlight">
+                    <input type="email" class="form-control" id="mailUsuario" placeholder="nombre@ejemplo.com">
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-9 mb-3 align-self-stretch bd-highlight">
+                    <input type="submit" name="" id="nameUsuario" value="Enviar" class="btn btn-secondary">
+                </div>
+                <section class="col-lg-12 col-md-12 col-sm-12">
                     <ul class="listaFooter">
                         <li>
-                            <a class="nav-link" href="./index.html">Inicio</a>
+                            <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
                         <li>
-                            <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+                            <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
                         </li>
                         <li>
-                            <a class="nav-link" href="./pages/productos.html">Productos</a>
-                            </liclass=>
+                            <a class="nav-link" href="../pages/productos.html">Productos</a>
+                        </li>
                         <li>
-                            <a class="nav-link" href="./pages/contacto.html">Contacto</a>
-                            </liclass=>
+                            <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                        </li>
                         <li>
-                            <a class="nav-link" href="./pages/ingresar.html">Ingresar</a>
+                            <a class="nav-link" href="../pages/ingresar.html">Ingresar</a>
                         </li>
                     </ul>
                 </section>
-                <article class="col-3 align-self-stretch bd-highlight">
-                    <h4 class=" font-weight-lighter">Suscríbete para recibir todas las novedades</h4>
-                </article>
-                <div class="mb-3 col-3 align-self-stretch bd-highlight">
-
-                    <input type="email" class="form-control" id="mailUsuario" placeholder="nombre@ejemplo.com">
-                </div>
-                <div class="mb-3 col-1 align-self-stretch bd-highlight">
-                    <input type="submit" name="" id="" value="Enviar" class="btn btn-secondary">
-                </div>
         </section>
     </footer>
 
