--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -56,7 +56,7 @@
     <!-- informacion contacto------------------------------------------------------------------------------- -->
     <h1>Contactate con Nosotros</h1>
     <article class="pContacto">
-        <p class="pContacto">No dudes en realizar tu consulta por cualquier medio de contacto, o tambien podes
+        <p class="pContacto text-center">No dudes en realizar tu consulta por cualquier medio de contacto, o tambien podes
             acercarte a nuestro showroom, estaremos atentos siempre para brindarte la mejor atención</p>
     </article>
 
@@ -81,7 +81,7 @@
     <div class="subtituloContacto">
         <h2 class="subtituloConsultanos">Dejanos tu consulta</h2>
     </div>
-    <div class="container form">
+    <form class="container form p-5">
         <div class="form-group">
             <label for="usr">Nombre:</label>
             <input type="text" class="form-control" id="usr">
@@ -92,23 +92,6 @@
         </div>
         <div class="form-group">
             <label for="usr">Género:</label>
-        </div>
-        <div class="form-group">
-            <div class="form-check-inline">
-                <label class="form-check-label">
-                    <input type="radio" class="form-check-input" name="optradio">Mujer
-                </label>
-            </div>
-            <div class="form-check-inline">
-                <label class="form-check-label">
-                    <input type="radio" class="form-check-input" name="optradio">Hombre
-                </label>
-            </div>
-            <div class="form-check-inline">
-                <label class="form-check-label">
-                    <input type="radio" class="form-check-input" name="optradio">Prefiero no responder
-                </label>
-            </div>
         </div>
         <div class="form-group">
             <label for="usr">Numero de Teléfono:</label>
@@ -130,60 +113,54 @@
             <textarea class="form-control" rows="5" id="comment"></textarea>
         </div>
         <button type="submit" class="btn btn-secondary">Enviar</button>
-    </div>
+    </form>
 
-    
-    <div class="iconoWp">
-        <a
-            href="https://api.whatsapp.com/send/?phone=%2B5493571614756&text=Hola!%20Quiero%20realizar%20una%20consulta%20por%20el%20producto%20...&app_absent=0"><img
-                src="../img/iconowp/wplogo.png" alt="Icono de Whatsapp" height="40px"></a>
+ <!-- FOOTER-------------------------------------------------------------------------------- -->
+ <footer>
+    <div>
+        <h4 class="tituloFooter">Cocorita Deco-Hogar</h4>
     </div>
-
-    <footer>
-        <div>
-            <h2 class="tituloFooter">Cocorita Deco-Hogar</h2>
+    <section class="container-fluid">
+        <div class="row">
+            <article class="redesSociales col-lg-12 col-md-12 col-sm-12 text-center h4">
+                <a href="https://www.facebook.com/" target="_blank" class="fa-brands fa-facebook"></a>
+                <a href="https://www.instagram.com/" target="_blank" class="fa-brands fa-instagram"></a>
+                <a href="https://twitter.com/home?lang=es" target="_blank" class="fa-brands fa-twitter"></a>
+                <a href="https://wa.link/znzpnb" target="_blank" class="fa-brands fa-whatsapp"></a>
+            </article>
         </div>
-        <section class="container-fluid">
-            <div class="row">
-                <article class="redesSociales col-12 text-center h4">
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-whatsapp"></i>
-                </article>
+        <div class="row">
+            
+            <article class="col-lg-12 col-md-12 col-sm-12 align-self-stretch bd-highlight">
+                <h6 class="font-weight-lighter">Suscríbete para recibir todas las novedades</h6>
+            </article>
+            <div class="col-lg-9 col-md-9 col-sm-9 mb-3  align-self-stretch bd-highlight">
+                <input type="email" class="form-control" id="mailUsuario" placeholder="nombre@ejemplo.com">
             </div>
-            <div class="row">
-                <section class="col-3">
-                    <ul class="listaFooter">
-                        <li>
-                            <a class="nav-link" href="./index.html">Inicio</a>
-                        </li>
-                        <li>
-                            <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
-                        </li>
-                        <li>
-                            <a class="nav-link" href="./pages/productos.html">Productos</a>
-                            </liclass=>
-                        <li>
-                            <a class="nav-link" href="./pages/contacto.html">Contacto</a>
-                            </liclass=>
-                        <li>
-                            <a class="nav-link" href="./pages/ingresar.html">Ingresar</a>
-                        </li>
-                    </ul>
-                </section>
-                <article class="col-3 align-self-stretch bd-highlight">
-                    <h4 class=" font-weight-lighter">Suscríbete para recibir todas las novedades</h4>
-                </article>
-                <div class="mb-3 col-3 align-self-stretch bd-highlight">
-
-                    <input type="email" class="form-control" id="mailUsuario" placeholder="nombre@ejemplo.com">
-                </div>
-                <div class="mb-3 col-1 align-self-stretch bd-highlight">
-                    <input type="submit" name="" id="" value="Enviar" class="btn btn-secondary">
-                </div>
-        </section>
-    </footer>
+            <div class="col-lg-3 col-md-3 col-sm-9 mb-3 align-self-stretch bd-highlight">
+                <input type="submit" name="" id="nameUsuario" value="Enviar" class="btn btn-secondary">
+            </div>
+            <section class="col-lg-12 col-md-12 col-sm-12">
+                <ul class="listaFooter">
+                    <li>
+                        <a class="nav-link" href="../index.html">Inicio</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="../pages/productos.html">Productos</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="../pages/ingresar.html">Ingresar</a>
+                    </li>
+                </ul>
+            </section>
+    </section>
+</footer>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
