correcciones pre-finales

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -55,10 +55,12 @@
     </nav>
     <h1>Nos conocemos</h1>    
     <section class="containerEach">
-        <article class="tienda-icon"></article>
-        <article class="equipo-icon"></article>
-        <article class="deco-icon"></article>
+        <article class="co-icon"></article>
+        <article class="oc-icon"></article>
+        <article class="ri-icon"></article>
+        <article class="ta-icon"></article>
     </section>
+
     <div class="contenedorNosotros">
     <section class="container p-3">
         <div class="row">
