--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
     <!-- BANNER --------------------------------------------------------------------------------------------->
     <section class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h1 class="tituloIndex text-center">Tienda Online</h1>
+            <h1 class="tituloIndex text-center">Cocorita Deco-Hogar</h1>
+            <h2> Tienda Online</h2>
             <article class="text-center">
                 <p>Envíos a todo el país</p>
                 <p>Compra mínima $3000</p>
@@ -166,7 +167,7 @@
     </section>
 
     <!-- BOTONES MEDIO DE PAGO ---------------------------------------------------------------------------->
-    <div class="container p-3">
+    <section class="botonesPago container p-3">
         <div class="row">
             <div class="col">
                 <h4 class="text-center">
@@ -192,7 +193,7 @@
                 <p>Consulta por los medios de pago</p>
             </div>
         </div>
-    </div>
+    </section>
     <!-- MINI FORMULARIO----------------------------------------------------------------------------- -->
     <section class="container">
         <div class="row shadow p-3 mb-5 bg-white rounded p-5">
